--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
-  "name": "saucedemo-e2e",
+  "name": "saucedemo-e2e-playwright-ts",
   "version": "1.0.0",
-  "description": "Playwright project for www.saucedemo.com",
-  "main": "index.js",
+  "description": "E2E Playwright test project for www.saucedemo.com + TypeScript",
+  "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "test": "npx playwright test",
     "test:smoke": "npx playwright test --grep @smoke --project=chromium",
+    "test:regression": "playwright test --grep @regression",
     "report": "playwright show-report",
-    "test:report": "playwright test && playwright show-report"
+    "test:report": "playwright test && playwright show-report",
+    "clean": "rm -rf playwright-report test-results .playwright || del /s /q playwright-report test-results .playwright && rm playwright.db"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/johnnyForever/saucedemo-playwright-e2e"
   },
-  "keywords": [],
-  "author": "Filip",
-  "license": "ISC",
-  "type": "commonjs",
+  "keywords": [
+    "playwright",
+    "typescript",
+    "e2e",
+    "testing",
+    "automation",
+    "saucedemo"
+  ],
+  "author": "Filip Gajdos",
+  "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "allure-playwright": "^3.4.3",
-    "dotenv": "^17.2.3"
-  },
-  "dependencies": {
-    "better-sqlite3": "^12.5.0"
+    "dotenv": "^17.2.3",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^1.6.0",
+    "prettier": "3.7.4",
+    "typescript": "^5.6.2"
   }
 }
