--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,34 @@
 {
   "compilerOptions": {
     "target": "es2022",
-    "lib": ["es2022"],
+    "lib": ["es2023", "DOM", "DOM.Iterable"],
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
+    "noEmit": true,
     "paths": {
        "@/*": ["src/*"],                
       },
-    //"types": ["node", "@playwright/test"],
+    "types": ["node", "@playwright/test"],
   },
   "include": [
     "src/**/*",
     "tests/**/*",
-    "playwright.config.ts"
+    "fixtures/**/*",
+    "playwright.config.ts",
+    "**/*.ts",
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "playwright-report",
+    "test-results"
   ]
-  // "include": [
-  //   "./playwright.config.ts",
-  //   "./tests/**/*",
-  //   "./fixtures/**/*",
-  //   "./**/*.ts"
-  // ]
 }
