new test shopping cart + refactoring

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "tests/**/*",
     "fixtures/**/*",
     "playwright.config.ts",
-    "**/*.ts",
+    "**/*.ts", "eslint.config.js",
   ],
   "exclude": [
     "node_modules",
