--- a/package.json
+++ b/package.json
@@ -29,17 +29,24 @@
   "author": "Filip Gajdos",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "allure-playwright": "^3.4.3",
     "dotenv": "^17.2.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-playwright": "^1.6.0",
+    "globals": "^17.0.0",
+    "jiti": "^2.6.1",
     "prettier": "3.7.4",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.52.0"
+  },
+  "dependencies": {
+    "better-sqlite3": "^12.5.0"
   }
 }
