--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,25 @@
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
-/.vscode/
-/package-lock.json
-/.env
-/results.json
 /.auth
-/allure-report
-/allure-results
-/auth.setup.ts
-/.prettierrc
-/eslint.config.js
-/eslint.config.ts
+
+# Test reports and results
+/allure-report/
+/allure-results/
+/results.json
+
+# Database
+*.db
+*.db-shm
+*.db-wal
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE
+/.vscode/
+
+# Lock files (optional - remove if you want to commit it)
+/package-lock.json
