--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,6 +14,10 @@ jobs:
   test:
     timeout-minutes: 20
     runs-on: ubuntu-latest
+    permissions:
+    contents: read
+    checks: write
+    pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -33,11 +37,10 @@ jobs:
         run: npx playwright test
         env:
           CI: true
-          PASSWORD: 'secret_sauce'
-          DASHBOARD_URL: '/inventory.html'
-          TOKEN_EP: 'submit.backtrace.io/UNIVERSE/TOKEN/json'
-          DASHBOARD_PICTURE_URL: '/static/media/'
-          ABOUT_URL: 'https://saucelabs.com/'
+          DASHBOARD_URL: ${{ vars.DASHBOARD_URL }}
+          TOKEN_EP: ${{ vars.TOKEN_EP }}
+          DASHBOARD_PICTURE_URL: ${{ vars.DASHBOARD_PICTURE_URL }}
+          ABOUT_URL: ${{ vars.ABOUT_URL }}
 
       - name: Upload Playwright report
         if: always()
