--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -37,6 +37,7 @@ jobs:
         run: npx playwright test
         env:
           CI: true
+          PASSWORD: ${{ secrets.SAUCE_PASSWORD }}
           DASHBOARD_URL: ${{ vars.DASHBOARD_URL }}
           TOKEN_EP: ${{ vars.TOKEN_EP }}
           DASHBOARD_PICTURE_URL: ${{ vars.DASHBOARD_PICTURE_URL }}
@@ -49,3 +50,17 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 14
+
+      - name: Upload JUnit report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-report
+          path: test-results/junit.xml
+          retention-days: 14
+
+      - name: Publish Test Results
+        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: test-results/junit.xml
