--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "scripts": {
     "test": "npx playwright test",
-    "test:smoke": "npx playwright test --grep @smoke --project=chromium",
-    "test:regression": "playwright test --grep @regression",
+    "test:smoke": "npx playwright test --grep '@smoke' --project=chromium",
+    "test:security": "npx playwright test --grep '@security' --project=chromium",
+    "test:regression": "npx playwright test --grep '@regression'",
     "report": "playwright show-report",
     "test:report": "playwright test && playwright show-report",
     "clean": "rm -rf playwright-report test-results .playwright || del /s /q playwright-report test-results .playwright || rm playwright.db",
@@ -37,8 +38,9 @@
   "author": "Filip Gajdos",
   "license": "MIT",
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.1",
     "@eslint/js": "^9.39.2",
-    "@playwright/test": "^1.57.0",
+    "@playwright/test": "^1.58.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
@@ -55,6 +57,7 @@
     "typescript-eslint": "^8.52.0"
   },
   "dependencies": {
-    "better-sqlite3": "^12.5.0"
+    "better-sqlite3": "^12.5.0",
+    "zod": "^4.3.6"
   }
 }
